feat: add simple seed functionality
