# apps/backend/ent/api/openapi.json
@@ -306,12 +306,16 @@
           },
           "email": {
             "type": "string"
+          },
+          "password": {
+            "type": "string"
           }
         },
         "required": [
           "id",
           "name",
-          "email"
+          "email",
+          "password"
         ]
       },
       "custom.AuthenticatedUserDoc": {
