# apps/backend/ent/schema/user.go
@@ -15,6 +15,7 @@ func (User) Fields() []ent.Field {
 	return []ent.Field{
 		field.String("name").NotEmpty(),
 		field.String("email").Unique(),
+		field.String("password").NotEmpty(),
 	}
 }
 
